; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_rsrc_mgr.c_pcmcia_find_mem_region.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_rsrc_mgr.c_pcmcia_find_mem_region.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }
%struct.pcmcia_socket = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.resource* @pcmcia_find_mem_region(i32 %0, i32 %1, i32 %2, i32 %3, %struct.pcmcia_socket* %4) #0 {
  %6 = alloca %struct.resource*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.pcmcia_socket*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store %struct.pcmcia_socket* %4, %struct.pcmcia_socket** %11, align 8
  %12 = load %struct.pcmcia_socket*, %struct.pcmcia_socket** %11, align 8
  %13 = getelementptr inbounds %struct.pcmcia_socket, %struct.pcmcia_socket* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = bitcast {}** %15 to %struct.resource* (i32, i32, i32, i32, %struct.pcmcia_socket*)**
  %17 = load %struct.resource* (i32, i32, i32, i32, %struct.pcmcia_socket*)*, %struct.resource* (i32, i32, i32, i32, %struct.pcmcia_socket*)** %16, align 8
  %18 = icmp ne %struct.resource* (i32, i32, i32, i32, %struct.pcmcia_socket*)* %17, null
  br i1 %18, label %19, label %32

19:                                               ; preds = %5
  %20 = load %struct.pcmcia_socket*, %struct.pcmcia_socket** %11, align 8
  %21 = getelementptr inbounds %struct.pcmcia_socket, %struct.pcmcia_socket* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = bitcast {}** %23 to %struct.resource* (i32, i32, i32, i32, %struct.pcmcia_socket*)**
  %25 = load %struct.resource* (i32, i32, i32, i32, %struct.pcmcia_socket*)*, %struct.resource* (i32, i32, i32, i32, %struct.pcmcia_socket*)** %24, align 8
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %10, align 4
  %30 = load %struct.pcmcia_socket*, %struct.pcmcia_socket** %11, align 8
  %31 = call %struct.resource* %25(i32 %26, i32 %27, i32 %28, i32 %29, %struct.pcmcia_socket* %30)
  store %struct.resource* %31, %struct.resource** %6, align 8
  br label %33

32:                                               ; preds = %5
  store %struct.resource* null, %struct.resource** %6, align 8
  br label %33

33:                                               ; preds = %32, %19
  %34 = load %struct.resource*, %struct.resource** %6, align 8
  ret %struct.resource* %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
